--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div id="salida" class="caja"></div>
            </div> 
            <div class="col-md-6">
-               <img src="img/pensamiento.jpg" alt="">
+               <img src="img/pensamiento.jpg" class="img-responsive" alt="">
            </div>           
         </div>
     </div>
