--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
            </div> 
            <div class="col-md-6">
                <img src="img/pensamiento.jpg" class="img-responsive" alt="">
-           </div>           
+           </div>
+           <p>
+               <a href="https://github.com/yovannanetwork/ejercicio-10">Ver codigos...</a>
+           </p>          
         </div>
     </div>
 </body>
